Navigation Mobile Fixed

--- a/client/src/app/shared/components/header/header.component.scss
+++ b/client/src/app/shared/components/header/header.component.scss
@@ -70,3 +70,7 @@ $topnav-background-color: #222;
 .header .navbar {
     background: $topnav-background-color !important;
 }
+
+.grails-icon img {
+    height: 27px;
+}
